--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "bcryptjs": "^3.0.2",
         "dotenv": "^16.4.7",
+        "express-validator": "^7.2.1",
         "express.js": "^1.0.0",
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.14.0"
