--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "description": "",
     "dependencies": {
         "bcryptjs": "^3.0.2",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express-validator": "^7.2.1",
         "express.js": "^1.0.0",
