--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^16.4.7",
         "express-validator": "^7.2.1",
         "express.js": "^1.0.0",
+        "http-status-codes": "^2.3.0",
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.14.0"
     }
